dataset1235/2025-2/2947369575/users/451402951/executions/1003782500_3921830315.log
== RUN (2025-09-01 21:43:47)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:50:45)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (34 / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:50:55)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 1000)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1537.76
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
21908.71
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
7393.1
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
12923.14
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
35225.16
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
6310.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:50:56)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 1000)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1537.76
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
21908.71
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
7393.1
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
12923.14
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
35225.16
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
6310.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:43:41)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34%

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:43:56)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:50:56)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 1000)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1537.76
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
21908.71
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
7393.1
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
12923.14
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
35225.16
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
6310.75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:41)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34.0

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:41)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34.0

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:44:19)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:45:44)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:51:05)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 10000)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1492.26
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
21260.35
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
7174.31
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
12540.69
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
34182.72
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
6123.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:42)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34.0

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 21:46:18)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:51:12)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 10000)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1492.26
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
21260.35
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
7174.31
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
12540.69
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
34182.72
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
6123.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:43:39)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34%

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:26)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:43:12)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    valor_abastecimento = litos * gasolina
                          ^^^^^
NameError: name 'litos' is not defined. Did you mean: 'litros'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:54:28)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento + servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:43:40)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34%

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:43:41)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34%

valor_abastecimento = litos * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms/100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    icms = 34%
              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:45:03)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:52:40)
-- CODE: 
litros = float(input())

gasolina = 2.86
servico = 50.0
icms = 34.0

valor_abastecimento = litros * gasolina

total_sem_imposto = valor_abastecimento * servico

valor_icms = total_sem_imposto * (icms / 100)

total_com_imposto = total_sem_imposto + valor_icms

print(round(total_com_imposto, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
1992.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
28392.34
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
9581.0
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
16747.59
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
45649.63
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
8178.34
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
